--- a/static/css/main.css
+++ b/static/css/main.css
@@ -162,15 +162,66 @@ nav a:hover {
     height: 2em;
 }
 
-#metronome {
-    width: 18em;
-    height: 30em;
+#metronome-container {
+    margin: 0 auto;
+}
+
+#metronome-container, #metronome {
+    width: 15em;
+    height: 25em;
 }
 
 .main {
     text-align: center;
 }
 
+.header-container {
+    border-bottom: 20px solid #7a7a7a;
+}
+
+.footer-container,
+.main aside {
+    border-top: 20px solid #7a7a7a;
+}
+
+.header-container,
+.main aside {
+    background: -webkit-linear-gradient(top, #000000, #979797);
+    background: -moz-linear-gradient(top, #000000, #979797));
+    background: -ms-linear-gradient(top, #000000, #979797));
+    background: -o-linear-gradient(top, #000000, #979797));
+}
+
+body {
+    background-image: -webkit-radial-gradient(left center, circle cover, #8d8d8d 20%, #2f2f2f 75%);
+    background-image: -moz-radial-gradient(center center, circle cover, #8d8d8d 45%, #2f2f2f 75%);
+    background-image: -ms-radial-gradient(center center, circle cover, #8d8d8d 45%, #2f2f2f 75%);
+    background-image: -o-radial-gradient(center center, circle cover, #8d8d8d 45%, #2f2f2f 75%);
+}
+
+nav a {
+    background: #7a7a7a;
+}
+
+input[type="range"] {
+    -webkit-appearance: none;
+    background-color: black;
+    height: 2px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    position: relative;
+    top: -1px;
+    z-index: 1;
+    width: 11px;
+    height: 11px;
+
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    border-radius: 40px;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ebf1f6), color-stop(50%,#abd3ee), color-stop(51%,#89c3eb), color-stop(100%,#d5ebfb));
+}
 
 /* ==========================================================================
    Media Queries
