--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Cool Metronome</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -22,26 +22,51 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <img id="logo" src="apple-touch-icon-144x144-precomposed.png" />
+                <h1 class="title">Cool Metronome</h1>
+                <nav>
+                    <ul>
+                        <li><a href="#" data-id="why">Why</a></li>
+                        <li><a href="#" data-id="howto">How To</a></li>
+                        <li><a href="#" data-id="about">About</a></li>
+                    </ul>
+                </nav>
             </header>
         </div>
 
         <div class="main-container">
             <div class="main wrapper clearfix">
+                <aside id="why" style="display: none;">
+                    <h3>Why</h3>
+                    <p>
+                        The metronome is used by musicians to help keep a steady tempo as they play, or to work on issues of irregular timing, or to help internalize a clear sense of timing and tempo. The metronome is also often used by composers as a standard tempo reference, to indicate the intended tempo for the piece.
+                    </p>
+                </aside>
+                <aside id="howto" style="display: none;">
+                    <h3>How To</h3>
+                    <p>
+                        Setting a tempo can be achieved by sliding the weight up and down the pendulum or tapping it.
+                        To start the metronome click the "Start" button. To stop the metronome click the "Stop" button.
+                        You can control volume with the slider beneath the metronome.
+                    </p>
+                </aside>
+                <aside id="about" style="display: none;">
+                    <h3>About</h3>
+                    <p>
+                        The metronome it created using HTML5, SVG and Web Audio API.
+                    </p>
+                </aside>
+                <div id="metronome-container">
 	            <embed id="metronome" type="image/svg+xml" src="img/metronome.svg" />
-                <form oninput="result.value=parseInt(volume.value)">
-                    <input id="volume" name="volume" type="range" value="100" />
-                    <output name="result">100</output>
-                </form>
-                <output
+                <input id="volume" name="volume" type="range" value="100" />
+                </div>
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
-        <div class="footer-container">
+        <!--<div class="footer-container">
             <footer class="wrapper">
                 <h3>footer</h3>
             </footer>
-        </div>
+        </div> -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
