jslinted main.js

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,21 +38,35 @@
                 <aside id="why" style="display: none;">
                     <h3>Why</h3>
                     <p>
-                        The metronome is used by musicians to help keep a steady tempo as they play, or to work on issues of irregular timing, or to help internalize a clear sense of timing and tempo. The metronome is also often used by composers as a standard tempo reference, to indicate the intended tempo for the piece.
+                        Metronomes improve your sense of beat and tempo. This metronome produces steady beat
+                        based on Web Audio API clock.
+                    </p>
+                    <p>
+                        Metronomes show you where you have technical difficulties.
+                        They can be used to gradually speed up
+                        the tempo of pieces you are working on or isolate and slow down very difficult passages to
+                        work them back to the original speed.
                     </p>
                 </aside>
                 <aside id="howto" style="display: none;">
                     <h3>How To</h3>
                     <p>
-                        Setting a tempo can be achieved by sliding the weight up and down the pendulum or tapping it.
+                        Setting a tempo can be achieved by sliding the weight up and down the pendulum or tapping it on
+                        the "Tap" button.
                         To start the metronome click the "Start" button. To stop the metronome click the "Stop" button.
-                        You can control volume with the slider beneath the metronome.
+                    </p>
+                    <p>
+                        You can control volume with the slider beneath the metronome. The metronome catches on the new
+                        volume with a little delay because it has few beats scheduled ahead for steadiness.
                     </p>
                 </aside>
                 <aside id="about" style="display: none;">
                     <h3>About</h3>
                     <p>
-                        The metronome it created using HTML5, SVG and Web Audio API.
+                        Author: Mykola Bespaliuk
+                    </p>
+                    <p>
+                        Cool Metronome is brought to you by HTML5, SVG and Web Audio API.
                     </p>
                 </aside>
                 <div id="metronome-container">
