--- a/static/css/main.css
+++ b/static/css/main.css
@@ -187,9 +187,9 @@ nav a:hover {
 .header-container,
 .main aside {
     background: -webkit-linear-gradient(top, #000000, #979797);
-    background: -moz-linear-gradient(top, #000000, #979797));
-    background: -ms-linear-gradient(top, #000000, #979797));
-    background: -o-linear-gradient(top, #000000, #979797));
+    background: -moz-linear-gradient(top, #000000, #979797);
+    background: -ms-linear-gradient(top, #000000, #979797);
+    background: -o-linear-gradient(top, #000000, #979797);
 }
 
 body {
