--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,11 @@
                     <p>
                         Cool Metronome is brought to you by HTML5, SVG and Web Audio API.
                     </p>
+                    <p>
+                        <a href="https://github.com/ukolka/metronome/issues" title="Report a problem" alt="Issues Tracker">
+                            <img src="img/blacktocat-32.png" title="Github" /> Report a problem
+                        </a>
+                    </p>
                 </aside>
                 <div id="metronome-container">
 	            <embed id="metronome" type="image/svg+xml" src="img/metronome.svg" />
