--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,17 @@
         <link rel="stylesheet" href="css/main.css">
 	
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+
+        <script type="text/javascript">
+            /* <![CDATA[ */
+            (function() {
+                var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+                s.type = 'text/javascript';
+                s.async = true;
+                s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+                t.parentNode.insertBefore(s, t);
+            })();
+            /* ]]> */</script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -81,11 +92,25 @@
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
-        <!--<div class="footer-container">
+        <div class="footer-container">
             <footer class="wrapper">
-                <h3>footer</h3>
+                <a class="FlattrButton" style="display:none;" href="http://coolmetronome.appspot.com/"></a>
+                <noscript><a href="http://flattr.com/thing/1102881/Cool-Metronome" target="_blank">
+                    <img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
+                <!-- AddThis Button BEGIN -->
+                <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+                    <a class="addthis_button_preferred_1"></a>
+                    <a class="addthis_button_preferred_2"></a>
+                    <a class="addthis_button_preferred_3"></a>
+                    <a class="addthis_button_preferred_4"></a>
+                    <a class="addthis_button_compact"></a>
+                    <a class="addthis_counter addthis_bubble_style"></a>
+                </div>
+                <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+                <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50f6bcb369cede91"></script>
+                <!-- AddThis Button END -->
             </footer>
-        </div> -->
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
