--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="Cool Metronome is an online metronome. It is used to practice playing musical instruments. It helps with developing sence of rhythm and accuracy." />
-        <meta name="keywords" content="metronome, music, practice, rhythm, speed, musical instrument, web audio api, svg metronome, javascript metronome, html5 metronome" />
+        <meta name="description" content="Cool Metronome is a FREE online metronome. It is used to practice playing musical instruments. It helps with developing sence of rhythm and accuracy." />
+        <meta name="keywords" content="online metronome, free metronome, metronome, music, practice, rhythm, speed, musical instrument, web audio api, svg metronome, javascript metronome, html5 metronome" />
         <title>Cool Metronome</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
