--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 	
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <!--<script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>-->
 
         <script type="text/javascript">
             /* <![CDATA[ */
@@ -86,6 +86,21 @@
                         </a>
                     </p>
                 </aside>
+                <div class="controls" style="float: right;">
+                    <fieldset>
+                        <!--<legend>Controls</legend>-->
+                        <form action="" method="post">
+                            <ul>
+                                <li>
+                                    <label for="bpm">BPM:</label>
+                                    <input type="number" name="bpm" id="bpm" value="208" min="40" max="208" />
+                                    <label for="step">Step:</label>
+                                    <input type="number" name="step" id="step" value="2" min="1" max="20" />
+                                </li>
+                            </ul>
+                        </form>
+                    </fieldset>
+                </div>
                 <div id="metronome-container">
 	            <embed id="metronome" type="image/svg+xml" src="img/metronome.svg" />
                 <input id="volume" name="volume" type="range" value="100" />
@@ -113,8 +128,8 @@
             </footer>
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>-->
 
         <script src="js/main.js"></script>
 
