added hot keys for bpm

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,6 +71,7 @@
                         You can control volume with the slider beneath the metronome. The metronome catches on the new
                         volume with a little delay because it has few beats scheduled ahead for steadiness.
                     </p>
+                    <p>Hot keys for BMP increase/decrease are Ctrl-Up Arrow/Ctrl-Down Arrow.</p>
                 </aside>
                 <aside id="about" style="display: none;">
                     <h3>About</h3>
